--- a/package.json
+++ b/package.json
@@ -12,5 +12,13 @@
   },
   "author": "David Foxworthy, Ben Wilcox",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/recanti/plotter#readme"
+  "homepage": "https://bitbucket.org/recanti/plotter#readme",
+  "devDependencies": {
+    "browserify": "^11.1.0",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^4.0.1",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-uglify": "^0.9.2",
+    "webpack": "^1.12.1"
+  }
 }
