--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-browserify": "^4.0.1",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
     "webpack": "^1.12.1"
   }
 }
