--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "plotter",
   "version": "0.2.0",
-  "description": "a library for plotting functions on the HTML5 Canvas tag",
-  "main": "plotter.js",
+  "description": "a library for plotting functions on the HTML5 Canvas",
+  "main": "dist/plotter.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bundle": "webpack src/entry.js dist/plotter.min.js"
   },
   "repository": {
     "type": "git",
@@ -15,6 +16,7 @@
   "homepage": "https://bitbucket.org/recanti/plotter#readme",
   "devDependencies": {
     "browserify": "^11.1.0",
+    "eslint": "^2.8.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
     "grunt-contrib-concat": "^0.5.1",
