--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
+    "mocha": "^2.4.5",
     "webpack": "^1.12.1"
   }
 }
