--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/plotter.min.js",
   "scripts": {
     "pretest": "eslint ./src/**/*",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha tests --recursive",
     "bundle": "webpack src/entry.js dist/plotter.min.js"
   },
   "repository": {
@@ -17,12 +17,16 @@
   "homepage": "https://bitbucket.org/recanti/plotter#readme",
   "devDependencies": {
     "browserify": "^11.1.0",
+    "canvas": "^1.3.12",
+    "chai": "^3.5.0",
     "eslint": "^2.8.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
+    "istanbul": "^0.4.3",
+    "jsdom": "^8.4.0",
     "mocha": "^2.4.5",
     "webpack": "^1.12.1"
   }
