--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ sftp-config.json
 
 # ignore node modules. They can be added via npm install
 node_modules
+
+# ignore the generated coverage information
+coverage/
