--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ sftp-config.json
 
 # ignore generated binary .DS_STORE
 .DS_STORE
+.DS_Store
 
 # ignore node modules. They can be added via npm install
 node_modules
